--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,57 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  margin-bottom: 16px;
+}
+
+.links {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+.header {
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  text-align: center;
+  padding: 0 16px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+}
+
+.sidebar {
+  display: flex;
+  flex-basis: 300px;
+  flex-shrink: 0;
+  padding: 16px;
+  flex-direction: column;
+}
+
+.content {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+}
+
+.card {
+  padding: 16px;
+  width: 300px;
+}
